Nangband Changelog
==================

First release: "Thru These Architecht's Eyes", Nangband 0.1.0

21/12/02
--------
- 11:24 GMT: imported the Vanilla 3.0.2 sources.  Work may now begin.
- 07:28 EST: applied patch to remove haggling.